More color bug fixes
Fixed more unreadable text

--- a/Sleek/user.css
+++ b/Sleek/user.css
@@ -421,3 +421,6 @@ svg[Attributes Style] {
     border-radius:20px;
     border-color:var(--spice-text);
 }
+.main-collectionLinkButton-collectionLinkButton.main-collectionLinkButton-selected{
+    color: var(--spice-subbutton-text) !important;
+}
